--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{  "homepage": "https://divanshu10.github.io/ShoppinCart",
+{
+  "homepage": "https://divanshu10.github.io/ShoppinCart",
   "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
@@ -6,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
